# traffic_counter

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: config.yaml
scripts/: download_model.py  export_yolo.py  test_camera.py
src/: ObjectDetector.cpp  ObjectDetector.h  TrafficCounter.cpp  TrafficCounter.h  main.cpp  utils.cpp  utils.h
